# MR

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: experiments.md  reproduction_log_template.md  usage.md
mrsim/: __init__.py  artifacts.py  config.py  data.py  experiment.py  fft_ops.py  greedy.py  masks.py  metrics.py  progress.py  recon.py  subspace.py  unet.py  viz.py
scripts/: 01_generate_synthetic_data.py  02_make_baseline_masks.py  03_reconstruct_and_evaluate.py  04_aopt_greedy_mask.py  05_artifact_aware_mask_search.py  06_greedy_data_driven_mask.py  07_compare_all_masks.py  08_subspace_mask.py  09_loupe_baseline.py  10_compare_manifold_vs_learned.py
tests/: test_decomposition_energy.py  test_error_decomposition.py  test_fft_adjoint.py  test_greedy_budget.py  test_line_masks.py  test_mask_budget.py  test_metrics_shapes.py  test_projector_idempotent.py  test_subspace.py  test_wavelet_ista.py  test_wiener_baseline.py
